# assure-2035-rust-api

./: .env.sample  .token.exemple  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
src/: main.rs
src/api/: mod.rs
src/api/clients/: client_component.rs  clients_dbo.rs  clients_event_mongo_repository.rs  clients_mongo_dao.rs  clients_mongo_repository.rs  mod.rs
src/api/clients/mappers/: events.rs  states.rs
src/api/clients/query/: mod.rs
src/api/clients/routes/: read_routes.rs  write_routes.rs
src/api/clients/services/: mod.rs
src/api/contrats/: contract_component.rs  contrats_dbo.rs  contrats_event_mongo_repository.rs  contrats_mongo_dao.rs  contrats_mongo_repository.rs  mod.rs
src/api/contrats/mappers/: events.rs  mod.rs  states.rs
src/api/contrats/query/: mod.rs
src/api/contrats/routes/: read_routes.rs  write_routes.rs
src/api/contrats/services/: facteur_pays_repo_mock.rs  facteur_vehicle_repo_mock.rs  formule_repo_mock.rs  formule_service_impl.rs  mod.rs
src/api/shared/: mod.rs
src/api/shared/cache/: mod.rs
src/api/shared/daos/: dbos.rs  mod.rs  mongo_dao.rs  mongo_entity_dao.rs
src/api/shared/query/: mod.rs  (+1 more)
src/api/swagger/: mod.rs
src/api/todos/: mod.rs  todo_dbo.rs  todo_event_mongo_repository.rs  todos_mongo_dao.rs  todos_mongo_repository.rs
src/core/: mod.rs
src/core/contrats/: mod.rs
src/core/shared/: can_get_id.rs  id_generator.rs  mod.rs
src/models/: mod.rs
src/models/clients/: mod.rs
src/models/contrats/: mod.rs
src/models/shared/: errors.rs  jsonapi.rs  mod.rs  views.rs
src/models/shared_business/: mod.rs
(+79 files in other folders)
